WSF-5811 use date format strings for better readability

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -125,6 +125,8 @@
     }
   }
 
+  .detail-view__meta abbr {border-bottom: 0;} 
+
   /* --Dividing lines-- */
   .detail-view__divider,
   .detail-view__divider--top-btm,
