WSF-5785 Update PHG Tag on Product Details
Refactor product#show and product#redirection for new pubref data.
Eliminate javascript redirection in favor of meta http-equiv=refresh
Add show and redirection specs.

--- a/app/views/products/redirection.html.erb
+++ b/app/views/products/redirection.html.erb
@@ -1,16 +1,12 @@
 <div class="container">
   <%= site_logo %>
 
-  <p>Forwarding to <%= @product.retail_chain_name %> website<br> or go to the <a href="<%= @product_tracking_url %>" rel="external">retailer's site</a> directly.</p>
+  <p>Forwarding to <%= meta.retail_chain_name %> website<br> or go to the
+    <a href="<%= meta.product_tracking_url %>" rel="external">retailer's site</a>
+  directly.</p>
 
   <span class="preloader preloader--light">
     <span class="preloader__spinner"></span>
     <em class="hide-visually">Loading, please wait&#8230;</em>
   </span>
 </div>
-
-<script>
-  setTimeout(function(){
-    window.location.replace("<%= @product_tracking_url.html_safe %>")
-  }, 500)
-</script>
