Change store list links to use default link colour - WSF-5867

--- a/app/assets/stylesheets/partials/modules/_stores-list.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-list.scss
@@ -71,10 +71,7 @@
       }
     }
 
-      a {
-        color: $color-dark-txt;
-        display: block;
-      }
+      a {display: block;}
 
     /* Phone no at non-palm */
     span {
