--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -173,6 +173,9 @@
 /* Bag */
 .icon--bag:before {content: "\e036";}
 
+/* Megaphone */
+.icon--megaphone:before {content: "\e039";}
+
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
 
