centres map popup and tacks it better on resize

--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -39,6 +39,7 @@ proxiedFunctions = [
   'centreOffset'
   'reset'
   'toggleKeyEvents'
+  'lock'
 ]
 
 do (proto = map.Micello.prototype, toProxy = proxiedFunctions) ->
