--- a/app/views/shared/micello_maps/_map.html.erb
+++ b/app/views/shared/micello_maps/_map.html.erb
@@ -33,7 +33,7 @@
   <%= cloudinary_js_config %>
   <% if load_immediately %>
     <%= javascript_tag do %>
-      new map.Micello().load().setTarget(<%= store_id %>).showLevel().zoom().detail().highlight().toggleKeyEvents(false);
+      new map.Micello().load().setTarget(<%= store_id %>).showLevel().zoom().detail().highlight().toggleKeyEvents(false).lock();
     <% end %>
   <% end %>
 <% end %>
