--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
     <header class="detail-view__mrg-base">
       <h1 class="detail-view__hdr hn" itemprop="summary"><%= @event.name %></h1>
       <ul class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm horiz-list horiz-list--fit">
-        <li class="detail-view__subtle-txt"><%= @event.date(:short_date_with_year) %></li>
+        <li class="detail-view__subtle-txt"><%= @event.start_date(:short_date_with_year) %></li>
         <li>
           <span class="icon icon--pin icon--lrg icon--spacing" aria-hidden="true"></span>
           <span itemprop="location"><%= @event.location %></span>
