Simplfying the selectors for the normalisation of :focus styles

--- a/app/assets/stylesheets/partials/utils/_reset.scss
+++ b/app/assets/stylesheets/partials/utils/_reset.scss
@@ -96,10 +96,4 @@ ol,
 ul {list-style: none;}
 
 /* Set consistent focus styles (adding to 'Normalize -> Links' rules) */
-a,
-button,
-input,
-textarea,
-select {
-  &:focus {outline: thin dotted;}
-}
+:focus {outline: thin dotted;}
