Truncate the store name in the map popup - WSF-5882

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -9,7 +9,7 @@
       </div>
     <%% } %>
     <div class="map-micello__overlay__retailer__body">
-      <em class="map-micello__hdr txt-break-word"><%%- name %></em>
+      <em class="map-micello__hdr txt-truncate"><%%- name %></em>
       <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time> tonight</p>
     </div>
   </div>
