--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -15,7 +15,7 @@
   color: $color-base-txt;
   @include font-size($font-size-sml, 1.5);
 
-  /* Needed so the social share controls can be seen */
+  /* So the social share controls can be seen when they overlap another tile */
   &:hover {z-index: 2;}
 
   /* Apply bottom spacing when inside the 'Pin board' module */
@@ -27,12 +27,18 @@
 
     /* Old IE - avoid `article` getting `display: inline` when the pin board is constructed with JS as the HTML5 shiv doesn't work in this case */
     @include old-ie {
-     display: block;
+      display: block;
     }
   }
 
   /* Global styles */
-  a {color: $color-light-txt;}
+  a {
+    color: $color-light-txt;
+    display: block;
+
+    /* Focus state for keyboard users */
+    &:focus {box-shadow: $box-shadow;}
+  }
 
   p {margin-bottom: 0;}
 }
@@ -56,7 +62,25 @@
     }
 
   /* Image */
-  .tile__image {text-align: center;}
+  .tile__image {
+    text-align: center;
+    position: relative;
+
+    /* Red transparent image overlay shown on hover/focus of the tile */
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      background-color: transparent;
+      @extend %transition-subtle;
+      cursor: pointer;
+
+      .tile:hover & {background-color: rgba($color-brand, 0.15);}
+    }
+  }
 
   /* Icon */
   .tile__meta__icon {
@@ -162,11 +186,9 @@
         @include to-rem(margin-bottom, $spacing-half);
       }
 
-      /* Old IE - prevent the image from getting distorted*/
+      /* Old IE - prevent the image from getting distorted */
       @include old-ie {
-        img {
-          width: 100%;
-        }
+        img {width: 100%;}
       }
     }
 
