--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -55,11 +55,11 @@
                     <col class="three-sixths lap-lrg-two-fifths desk-two-fifths"></col>
                   </colgroup>
 
-                  <thead class="hide-visually">
+                  <thead>
                     <tr>
-                      <th scope="col">Day</th>
-                      <th scope="col">Public holiday</th>
-                      <th scope="col">Time</th>
+                      <th scope="col" class="table-cell-padding-off"><span class="hide-visually">Day</span></th>
+                      <th scope="col" class="table-cell-padding-off"><span class="hide-visually">Public holiday</span></th>
+                      <th scope="col" class="table-cell-padding-off"><span class="hide-visually">Time</span></th>
                     </tr>
                   </thead>
 
