--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -2,7 +2,7 @@
 
   <%# Section nav %>
   <div class="container container--position">
-    <div class="nav-contextual nav-contextual--dark js-nav-contextual">
+    <div class="nav-contextual nav-contextual--dark js-nav-contextual js-viewport-check">
       <div class="nav-contextual__clip">
         <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Categories navigation">
           <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
