--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
   <h2 class="hide-visually">Session Times</h2>
 
     <%# Nav contextual %>
-    <div class="nav-contextual js-nav-contextual">
+    <div class="nav-contextual js-nav-contextual js-viewport-check">
       <div class="nav-contextual__clip">
         <div class="nav-contextual__clip__inner">
           <ul class="nav-contextual__list tab__nav horiz-list js-nav-contextual-list">
