--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -1,5 +1,5 @@
 <%# Nav contextual %>
-<div class="nav-contextual js-nav-contextual">
+<div class="nav-contextual js-nav-contextual js-viewport-check">
   <div class="nav-contextual__clip">
     <div class="nav-contextual__clip__inner">
       <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
