WSF-5896 added alt tags to canned searches

--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -1,6 +1,6 @@
 <div class="tile__image">
   <%= cl_image_tag(result.image_ref, 
-    alt: "Photo of #{result.name}",
+    alt: result.image_alt,
     width: 288,
     crop: 'limit', 
     quality: 25, 
