--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -17,9 +17,6 @@
   position: relative;
   @extend %mrg-base;
   border-bottom: 1px solid $color-grey-1;
-
-  /* Add native scrolling effect in webkit when `.nav-contextual` is in viewport and is clipped i.e. when it's scrollable. This is to fix the problem of `-webkit-overflow-scrolling` disabling the "tap on status bar to scroll to top" function in iOS. */
-  &.is-in-viewport.is-clipped .nav-contextual__clip__inner {-webkit-overflow-scrolling: touch;}
 }
 
 /* Shared rules */
@@ -38,6 +35,9 @@
 
       /* Allows scrolling of the list of links when JS detects that the width of `.nav-contextual__list` is wider than `.nav-contextual__clip__inner` */
       .is-clipped & {overflow-x: scroll;}
+
+      /* Add native scrolling effect in webkit when `.nav-contextual` is in viewport. This is to fix the problem of `-webkit-overflow-scrolling` disabling the "tap on status bar to scroll to top" function in iOS. */
+      .is-in-viewport & {-webkit-overflow-scrolling: touch;}
 
       /* Non JS users */
       .no-js & {overflow-x: auto;}
