Implementing site wide feedback button using JIRA issue collector

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,6 +172,7 @@ Global stylesheet
 @import "partials/buttons/menu";
 @import "partials/buttons/faux-link";
 @import "partials/buttons/expand-collapse";
+@import "partials/buttons/site-feedback";
 
 /* Helpers */
 @import "partials/helpers/hide";
