--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -113,6 +113,7 @@
 							<%#<li>%><%#= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %><%#</li>%>
 							<li><%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %></li>
 							<li><%= link_to 'Privacy Policy', '/privacy-policy' %></li>
+							<li class="nav-site-feedback"><button type="button" class="btn js-btn-site-feedback">Give feedback</button></li>
 						</ul>
 					</nav>
 					<%# //Tertiary navigation %>
