--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -59,6 +59,13 @@
 
   <%= yield %>
 
+  <%# Site feedback button - links to JIRA issue collector %>
+  <button type="button" class="btn btn--site-feedback js-btn-site-feedback">
+    <span class="icon icon--megaphone icon--xlrg icon--flush-top" aria-hidden="true"></span><!--
+    --><span class="btn--site-feedback__lbl">Give&nbsp;feedback</span>
+  </button>
+  <%# //Site feedback button - links to JIRA issue collector %>
+
   <%= render "/shared/javascripts_global" %>
 
 </body>
