--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -142,7 +142,7 @@
       }
 
       /* When map view is in view */
-      @include respond-max($palm) {
+      @include respond-max($ipad-landscape - 1) {
         .is-map-view & {
           background: none;
           border: 0;
@@ -169,7 +169,7 @@
       }
 
       /* Inner container */
-      .container {
+      > .container {
         position: relative;
         @include to-rem(padding-top padding-bottom, $spacing-half);
         @extend %clear-fix;
@@ -177,6 +177,11 @@
         /* Increase padding at this breakpoint */
         @include respond-min($non-palm) {
           @include to-rem(padding-top padding-bottom, $spacing-half+$spacing-quarter);
+        }
+
+        /* Remove bottom padding at this breakpoint */
+        @include respond-min($ipad-landscape) {
+          padding-bottom: 0;
         }
       }
     }
@@ -188,8 +193,6 @@
         @include font-size($font-size-xlrg, 1.5);
         color: $color-dark-txt;
         @include to-em(margin-bottom, $spacing-third);
-        /* Temp style so current feature can be released */
-        margin-bottom: 0;
 
         /* Detail view */
         .stores-maps__inner--detail & {
@@ -221,7 +224,9 @@
           a.stores-maps__filters-toggle__hdr:hover > span,
           a.stores-maps__filters-toggle__hdr:focus > span {color: $color-link-hover;}
 
-      /* Filters */
+      /* --Filters-- */
+
+      /* 'Categories' and 'Gift card toggle' */
       .stores-maps__filters {
         float: left;
 
@@ -254,6 +259,62 @@
               @include to-rem(margin-left, $spacing-quarter);
             }
           }
+      }
+
+      /* A-Z pagination */
+      .stores-maps__pagination {
+        position: absolute;
+        left: 0;
+        /* This right position equals the width of the map view toggle button + 10px */
+        @include to-rem(right, 50);
+        @include to-rem(top, 6);
+
+        /* Increase top and right positioning at this breakpoint */
+        @include respond-min($non-palm) {
+          /* This right position equals the width of the map view toggle button + 10px */
+          @include to-rem(right, 134);
+          @include to-rem(top, 12);
+        }
+
+
+        @include respond-max($ipad-landscape - 1) {
+          .containers {
+            width: auto;
+            max-width: none;
+          }
+          /* Hide when in map view at this breakpoint */
+          .is-map-view & {display: none;}
+        }
+
+        /* Remove absolute positioning and apply cosmetics/structural rules at this breakpoint */
+        @include respond-min($ipad-landscape) {
+          position: static;
+          background-color: $color-off-white;
+          border-top: 1px solid $color-grey-1;
+        }
+
+          /* Nav contextual */
+          .nav-contextual {border-bottom: 0;}
+
+            /* Links */
+            .nav-contextual__list a {
+
+              /* Decrease top and bottom padding for links at this breakpoint */
+              @include respond-min($non-palm) {
+                @include to-rem(padding-top padding-bottom, $spacing-half);
+              }
+
+              /* Decrease left and right padding at this breakpoint */
+              @include respond-min(1280) {
+                @include to-rem(padding-left padding-right, $spacing-quarter);
+              }
+
+            }
+
+            /* Gradient that fades out the right side of the links and the scrolling indicator, change the colour at this breakpoint */
+            @include respond-min($ipad-landscape) {
+              .nav-contextual__clip__overlay {@include linear-gradient($from: rgba($color-off-white, 0) 0%, $to: rgba($color-off-white, 1) 50%, $dir: right, $dir-webkit: left)}
+            }
       }
 
       /* Toggle button */
@@ -319,7 +380,7 @@
     .stores-maps__list-detail {
       position: absolute;
       z-index: 5;
-      @include to-rem(top, 56);
+      @include to-rem(top, 55);
       bottom: 0;
       left: 0;
       right: 0;
@@ -371,9 +432,7 @@
 
       /* Apply box treatments and alter top/btm positioning at this breakpoint */
       @include respond-min($ipad-landscape) {
-        /* Temp style so current feature can be released */
-        @include to-rem(top, 111);
-        //@include to-rem(top, 164);
+        @include to-rem(top, 151);
         @include to-rem(bottom, $spacing-base);
         @include box;
         @include box-heavy;
