--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -10,7 +10,7 @@
     <%% } %>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-truncate"><%%- name %></em>
-      <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time> tonight</p>
+      <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p>
     </div>
   </div>
   <%%  if(storefront_path) {  %>
@@ -19,7 +19,7 @@
     Store details
   </a>
   <%% } else {  %>
-  <button class="map-micello__overlay__cta btn btn--full btn--main js-stores-maps-toggle-btn js-map-hide" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map">
+  <button class="map-micello__overlay__cta btn btn--full btn--main js-stores-maps-toggle-btn js-map-hide" aria-owns="stores-maps-toggle-listing-detail stores-maps-toggle-map">
     <span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>
     Store details
   </button>
