Display the retailer name is there's no logo.

--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -175,6 +175,9 @@
     }
   }
 
+    /* Header */
+    .tile__meta__hdr {@include to-rem(margin-bottom, $spacing-quarter);}
+
     /* Logo */
     .tile__meta__image {
       display: block;
