--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -9,8 +9,10 @@
         format: :auto
       %>
     </span>
+  <% else %>
+    <h3 class="tile__meta__hdr txt-break-word"><%= result.store_name %></h3>
   <% end %>
-  <p class="tile__meta__desc"><%= result.title %></p>
+  <p class="tile__meta__desc txt-break-word"><%= result.title %></p>
 </div>
 
 <span class="tile__meta__icon">
