WSF-5012 add img_alt_text display. Clean up html as per Fiona's instructions

--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -2,7 +2,7 @@
   <header class="detail-view__mrg-base">
     <%# [BACKEND] Character limit - 65. We need to generate ellipses at the end of the truncation like so:
         <%=raw @notice.description.truncate(65, '&#8230;') %>
-    <h1 class="detail-view__hdr hn" id="detail-view__hdr"><%= @notice.name.truncate(65, '&#8230;') %></h1>
+    <h1 class="detail-view__hdr hn"><%= @notice.name.truncate(65, '&#8230;') %></h1>
 
     <%# Notice meta %>
     <div class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm">
@@ -12,9 +12,9 @@
   </header>
 
   <%# Notice image %>
-  <div class="detail-view__media detail-view__mrg-base" itemprop="photo">
+  <div class="detail-view__media detail-view__mrg-base">
     <%= cl_image_tag @notice.image_ref,
-        alt: "Photo of notice: #{@notice.name}",
+        alt: notice.img_alt_text ? notice.img_alt_text : "",
         width: 638,
         crop: :limit,
         format: :jpg,
@@ -24,7 +24,7 @@
   <%# //Notice image %>
 
   <%# Notice description %>
-  <div class="detail-view__desc txt-formatted">
+  <div class="detail-view__desc">
     <% to_paragraphs(@notice.detail).each do |text| %>
       <p><%= text %></p>
     <%- end %>
